# nymble-relay

./: .gitignore  README.md  nymble-relay.spec  pyproject.toml  requirements.txt
.github/workflows/: release.yml
config/: config.yaml
nymble_relay/: __init__.py  __main__.py  auth.py  config.py  protocol.py  server.py
nymble_relay/output/: __init__.py  clipboard.py  hid.py  manager.py  xdotool.py
tests/: __init__.py
